--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
 
             <div class="site__main">
               <div>
-                <h1>
-                  Go online. <br />
-                  Save more. <br />
+                <h1 class="js_main-title">
+                  
                 </h1>
               </div>
             </div>
