Last Eduardo changes 29.02.24

--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
         <div class="container">
           <section class="policy">
             <ul class="policy__list">
-              <li class="policy__item">
+              <!-- <li class="policy__item">
                 <div class="policy__block policy__block--first">
                   <h3 class="sub-title">RETURN POLICY</h3>
                   <p class="text">The items are eligible for free replacement, within 30 days of delivery, in an unlikely event of damaged, defective or different item delivered to you.</p>
                   <a href="./return.html" class="policy__btn">read more</a>
                 </div>
                
-              </li>
+              </li> -->
               <li class="policy__item">
                 <div class="policy__block policy__block--second">
                   <h3 class="sub-title">PRIVACY NOTICE</h3>
